nullaway_error_09aab4d3-159d-451f-b797-74a291986680.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/Entity.java:311: error: [NullAway] dereferenced expression this.actions.get(actionName) is @Nullable
    this.actions.get(actionName).perform();
                                ^
    (see http://t.uber.com/nullaway )
